Bug 149963 - XFind not a property/attribute of XRange
Summary: XFind not a property/attribute of XRange
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Hannah Meeks
URL:
Whiteboard: target:7.5.0
Keywords:
Depends on:
Blocks: Macro-VBA
  Show dependency treegraph
 
Reported: 2022-07-12 14:55 UTC by Hannah Meeks
Modified: 2024-03-27 10:39 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hannah Meeks 2022-07-12 14:55:00 UTC
Description:
Macros test fails - 'Property or method not found'

Steps to Reproduce:
1.Run macro test (testFind)
2.
3.

Actual Results:
/

Expected Results:
/


Reproducible: Always


User Profile Reset: No



Additional Info:
/
Comment 1 Xisco Faulí 2022-07-13 07:46:22 UTC
Hi Hannah,
you forgot to attach the sample file
Comment 2 Hannah Meeks 2022-07-13 15:03:15 UTC
Sorry patch fixing this - https://gerrit.libreoffice.org/c/core/+/137004 
Thanks :-)
Comment 3 Commit Notification 2022-07-14 08:20:44 UTC
Hannah Meeks committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0b5df6634a2021986b0de2ab12a41c0d4af4f60c

tdf#149963 -  XFind not a property/attribute of XRange

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Buovjaga 2022-11-01 07:02:30 UTC
Looks like this can be changed to fixed status. Thanks.