tdf#149963 -  XFind not a property/attribute of XRange

Updated XRange to include XFind

Change-Id: If9570fbb5de8d14063a72a4c4c55fcfd491dd496